2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* man/Makefile.am: Indicate that man/generate_mans.deps is
	generated.

2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Re-indent.
	* lib/commonio.c: Document the sections closed by #endif
	* lib/commonio.c: Added brackets.
	* lib/commonio.c: Avoid implicit conversion of integer to
	booleans.

2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c: Re-indent.
	* src/userdel.c: Added brackets.
	* src/userdel.c: Avoid implicit conversion of pointers to
	booleans.

2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/shadowio.c: Re-indent.
	* lib/shadowio.c: Added brackets and parenthesis.
	* lib/shadowio.c: Document the sections closed by #endif
	* lib/shadowio.c: Avoid negation of comparisons.
	* lib/shadowio.c: Avoid implicit conversion of integer to booleans
	and booleans to integers.

2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Re-indent.
	* src/useradd.c: Added brackets.
	* src/useradd.c: Avoid implicit conversion of integers to
	booleans.
	* src/useradd.c: Harmonize error messages.

2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Document the sections closed by #endif
	* src/vipw.c: Avoid implicit conversion of pointers or integers to
	booleans.
	* src/vipw.c: Added brackets and parenthesis.
	* src/vipw.c: Limit the definition of some variables and macros to
	the WITH_TCB scope.
	* src/vipw.c: Avoid assignment in comparisons.
	* src/vipw.c: Replace PASSWD_FILE (resp. GROUP_FILE and
	SGROUP_FILE) by pw_dbname () (resp. gr_dbname () and sgr_dbname ()).
	This is more consistent with the shadow file handling and may be
	useful to allow edition of another partition's files.


2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Re-indent.
	* src/usermod.c: Avoid implicit conversion of pointers to
	booleans.